@@ -1,6 +1,11 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.198.2.3 2005/04/09 12:50:11 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.198.2.4 2005/04/09 15:52:20 wolf31o2 Exp $
+
+  09 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org>
+  livecd/runscript-support/gamecdfs-update.sh:
+  Updated to create a /var/db entry for xorg-x11, required for opengl-update.
+  Also make PORTAGE_TMPDIR=/tmp for opengl-update.
 
   09 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org>
   livecd/runscript-support/pre-kmerge.sh:
